--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -83,9 +83,7 @@
 
         <div class="component-code-preview">
           <iframe
-            src="https://carbon.now.sh/embed/MEWDgguNQLQhTwv2HQwR"
-            style="width: 100%; height: 500px; border:0; transform: scale(1); overflow:hidden;"
-            sandbox="allow-scripts allow-same-origin">
+            src="https://carbon.now.sh/embed/SPN56tbLFlwjAAWR1ZJF">
           </iframe>
         </div>
       </main>
