added: button component and fix: code preview

--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -10,8 +10,9 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="avatar.css" />
+    
     <link rel="stylesheet" href="../../styles.css" />
+    <link rel="stylesheet" href="avatar.css" />
     <title>⚡ || Avatar</title>
   </head>
   <body>
@@ -35,7 +36,7 @@
     <div class="container">
       <nav class="navbar">
         <ul class="list">
-          <li class="list-item"><a href="">Avatar</a></li>
+          <li class="list-item"><a href="#">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="">Badge</a></li>
           <li class="list-item"><a href="">Alert</a></li>
@@ -81,10 +82,88 @@
           >
         </div>
 
-        <div class="component-code-preview">
-          <iframe
-            src="https://carbon.now.sh/embed/SPN56tbLFlwjAAWR1ZJF">
-          </iframe>
+        <div class="code-box">
+          <span>Code Preview</span>
+          <div class="code">
+              <div class="line">
+                  <span class="sym"><</span>
+                  <span class="element">image </span>
+                  <span class="attribute">class</span>
+                  <span class="sym">=</span>
+                  <span class="attr-content">"avatar avatar-s" </span>
+                  <span class="attribute">src</span>
+                  <span class="sym">=</span>
+                  <span class="attr-content">"https://pin.it/6EPHvdt" </span>
+                  <span class="attribute">alt</span>
+                  <span class="sym">=</span>
+                  <span class="attr-content">"avatar" </span>
+                  <span class="sym">></span>
+              </div>
+          </div>
+          <div class="code">
+            <div class="line">
+              <span class="sym"><</span>
+              <span class="element">image </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar avatar-m" </span>
+              <span class="attribute">src</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
+              <span class="attribute">alt</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar" </span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line">
+              <span class="sym"><</span>
+              <span class="element">image </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar avatar-l" </span>
+              <span class="attribute">src</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
+              <span class="attribute">alt</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar" </span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line">
+              <span class="sym"><</span>
+              <span class="element">image </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar avatar-xl" </span>
+              <span class="attribute">src</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
+              <span class="attribute">alt</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar" </span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line">
+              <span class="sym"><</span>
+              <span class="element">image </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar avatar-2xl" </span>
+              <span class="attribute">src</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
+              <span class="attribute">alt</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"avatar" </span>
+              <span class="sym">></span>
+            </div>
+          </div>
         </div>
       </main>
     </div>
