--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ li {
 
 .line-break {
   height: 0.0625rem;
-  background-color:gray;
+  background-color: gray;
 }
 
 /* --------------------------HEADER--------------------------------- */
@@ -66,7 +66,7 @@ li {
 /* -------------------------------------------------------------- */
 
 .container {
-  height: 100%;
+  /* height: 100%; */
   width: 100vw;
   display: flex;
   background-color: #fff;
@@ -113,11 +113,11 @@ li {
   flex: 0.9;
   margin: 1.25rem 1.9rem;
   box-shadow: 1px 1px 15px 0 #ccc;
-  padding: 1.5rem;
+  padding: 1.5rem 2rem;
 }
 
 .component-title {
-  margin: .625rem;
+  margin: 0.625rem;
 }
 
 .component-description {
@@ -136,27 +136,65 @@ li {
   padding: 1rem 0;
 }
 
-.component-preview .avatar {
+.component-preview .avatar,
+.component-preview .button {
   margin: 0 0.625rem;
-} 
-
-.component-code-preview {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%;
 }
 
-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+.code-box {
+  max-width: 65vw;
+  background: #011627;
+  padding: 1rem 1rem;
+  border-radius: 10px;
+  margin: 1.5rem auto;
+  text-align: center;
+  font-size: 1.15rem;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  color: pink;
+}
+
+.code {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+  margin-bottom: 5px;
+}
+
+.line {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.code-box > .code > .line > span {
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
+  white-space: pre;
+}
+
+.content {
+  color: #fff;
+}
+
+.sym {
+  color: #a2ffda;
+}
+
+.element {
+  color: #84ebf7;
+}
+
+.attribute {
+  color: #54a7ff;
+}
+
+.attr-content {
+  color: #faa448;
+}
+
+.comment {
+  color: rgb(24, 165, 158);
 }
