--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -39,7 +39,7 @@
           <li class="list-item"><a href="#">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="">Badge</a></li>
-          <li class="list-item"><a href="">Alert</a></li>
+          <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
           <li class="list-item"><a href="">Input</a></li>
