--- a/components/button/index.html
+++ b/components/button/index.html
@@ -38,7 +38,7 @@
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="#">Button</a></li>
           <li class="list-item"><a href="">Badge</a></li>
-          <li class="list-item"><a href="">Alert</a></li>
+          <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
           <li class="list-item"><a href="">Input</a></li>
