--- a/components/alert/index.html
+++ b/components/alert/index.html
@@ -37,7 +37,7 @@
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
-          <li class="list-item"><a href="">Badge</a></li>
+          <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="#">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
@@ -58,7 +58,7 @@
         <div class="code-box">
           <span class="code-box-title">Code Preview</span>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">div </span>
               <span class="attribute">class</span>
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">div </span>
               <span class="attribute">class</span>
@@ -86,7 +86,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">div </span>
               <span class="attribute">class</span>
