--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -38,7 +38,7 @@
         <ul class="list">
           <li class="list-item"><a href="#">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
-          <li class="list-item"><a href="">Badge</a></li>
+          <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
@@ -85,7 +85,7 @@
         <div class="code-box">
           <span>Code Preview</span>
           <div class="code">
-              <div class="line">
+              <div class="line1">
                   <span class="sym"><</span>
                   <span class="element">image </span>
                   <span class="attribute">class</span>
@@ -101,7 +101,7 @@
               </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">image </span>
               <span class="attribute">class</span>
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">image </span>
               <span class="attribute">class</span>
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">image </span>
               <span class="attribute">class</span>
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">image </span>
               <span class="attribute">class</span>
