--- a/components/button/index.html
+++ b/components/button/index.html
@@ -37,7 +37,7 @@
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="#">Button</a></li>
-          <li class="list-item"><a href="">Badge</a></li>
+          <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
@@ -59,7 +59,7 @@
         <div class="code-box">
           <span class="code-box-title">Code Preview</span>
           <div class="code">
-              <div class="line">
+              <div class="line1">
                   <span class="sym"><</span>
                   <span class="element">button </span>
                   <span class="attribute">class</span>
@@ -73,7 +73,7 @@
               </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
                   <span class="element">button </span>
                   <span class="attribute">class</span>
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
                   <span class="element">button </span>
                   <span class="attribute">class</span>
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
@@ -185,7 +185,7 @@
         <div class="code-box">
           <span class="code-box-title">Code Preview</span>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
@@ -208,14 +208,13 @@
             </div>
           </div>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
               <span class="sym">=</span>
               <span class="attr-content">"button icon-button" </span>
               <span class="sym">></span>
-
               <span class="sym"><</span>
               <span class="element">i </span>
               <span class="attribute">class</span>
@@ -225,7 +224,6 @@
               <span class="sym"><</span>
               <span class="element">/i</span>
               <span class="sym">></span>
-
               <span class="content">Call</span>
               <span class="sym"><</span>
               <span class="element">/button</span>
@@ -244,7 +242,7 @@
         <div class="code-box">
           <span class="code-box-title">Code Preview</span>
           <div class="code">
-            <div class="line">
+            <div class="line1">
               <span class="sym"><</span>
               <span class="element">button </span>
               <span class="attribute">class</span>
