fix: refactored css

--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -35,8 +35,12 @@
     </header>
     <div class="container">
       <nav class="navbar">
+        <div class="component">
+          <h3>Components</h3>
+          <i class="far fa-chevron-circle-down"></i>
+        </div>
         <ul class="list">
-          <li class="list-item"><a href="#">Avatar</a></li>
+          <li class="list-item active"><a href="#">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
