--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -46,7 +46,7 @@
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
-          <li class="list-item"><a href="">Input</a></li>
+          <li class="list-item"><a href="../input/index.html">Input</a></li>
         </ul>
       </nav>
       <main class="main">
