--- a/components/button/index.html
+++ b/components/button/index.html
@@ -34,6 +34,10 @@
     </header>
     <div class="container">
       <nav class="navbar">
+        <div class="component">
+          <h3>Components</h3>
+          <i class="far fa-chevron-circle-down"></i>
+        </div>
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="#">Button</a></li>
@@ -41,7 +45,7 @@
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="">Card</a></li>
           <li class="list-item"><a href="">Image</a></li>
-          <li class="list-item"><a href="">Input</a></li>
+          <li class="list-item"><a href="../input/index.html">Input</a></li>
         </ul>
       </nav>
       <main class="main">
