fixed: some ui issues

--- a/components/alert/index.html
+++ b/components/alert/index.html
@@ -36,7 +36,8 @@
       <nav class="navbar">
         <div class="component">
           <h3>Components</h3>
-          <i class="far fa-chevron-circle-down"></i>
+          <i class="far fa-chevron-circle-down" id="down-btn"></i>
+          <i class="far fa-chevron-circle-up" id="up-btn"></i>
         </div>
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
@@ -106,5 +107,6 @@
         </div>
       </main>
     </div>
+    <script src="../../scripts/app.js"></script>
   </body>
 </html>
