--- a/components/badge/index.html
+++ b/components/badge/index.html
@@ -37,7 +37,8 @@
       <nav class="navbar">
         <div class="component">
           <h3>Components</h3>
-          <i class="far fa-chevron-circle-down"></i>
+          <i class="far fa-chevron-circle-down" id="down-btn"></i>
+          <i class="far fa-chevron-circle-up" id="up-btn"></i>
         </div>
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
@@ -284,5 +285,6 @@
         </div>
       </main>
     </div>
+    <script src="../../scripts/app.js"></script>
   </body>
 </html>
