--- a/components/button/index.html
+++ b/components/button/index.html
@@ -36,7 +36,8 @@
       <nav class="navbar">
         <div class="component">
           <h3>Components</h3>
-          <i class="far fa-chevron-circle-down"></i>
+          <i class="far fa-chevron-circle-down" id="down-btn"></i>
+          <i class="far fa-chevron-circle-up" id="up-btn"></i>
         </div>
         <ul class="list">
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
@@ -263,5 +264,6 @@
       </main>
     </div>
     <script src="../../scripts/index.js"></script>
+    <script src="../../scripts/app.js"></script>
   </body>
 </html>
