--- a/components/input/index.html
+++ b/components/input/index.html
@@ -17,6 +17,7 @@
   <body>
     <header class="header">
       <div class="logo">
+        <i class="fas fa-bars" id="hamburger"></i>
         <span><button class="button-icon">⚡</button></span>
         THUNDER UI
       </div>
@@ -34,12 +35,11 @@
     </header>
     <div class="container">
       <nav class="navbar">
-        <div class="component">
-          <h3>Components</h3>
-          <i class="far fa-chevron-circle-down" id="down-btn"></i>
-          <i class="far fa-chevron-circle-up" id="up-btn"></i>
-        </div>
         <ul class="list">
+          <div class="cross">
+            <i class="far fa-times"></i>
+          </div>
+          <h3>Components</h3>
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
