--- a/components/input/index.html
+++ b/components/input/index.html
@@ -174,5 +174,6 @@
       </main>
     </div>
     <script src="../../scripts/app.js"></script>
+    <script src="../../scripts/app.js"></script>
   </body>
 </html>
