--- a/components/badge/index.html
+++ b/components/badge/index.html
@@ -45,8 +45,8 @@
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="#">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
-          <li class="list-item"><a href="">Card</a></li>
-          <li class="list-item"><a href="">Image</a></li>
+          <li class="list-item"><a href="../card/index.html">Card</a></li>
+          <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
         </ul>
       </nav>
