--- a/components/alert/index.html
+++ b/components/alert/index.html
@@ -43,10 +43,11 @@
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
-          <li class="list-item"><a href="#">Alert</a></li>
+          <li class="list-item active"><a href="#">Alert</a></li>
           <li class="list-item"><a href="../card/index.html">Card</a></li>
           <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
+          <li class="list-item"><a href="../list/index.html">List</a></li>
         </ul>
       </nav>
       <main class="main">
