--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -48,6 +48,7 @@
           <li class="list-item"><a href="../card/index.html">Card</a></li>
           <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
+          <li class="list-item"><a href="../list/index.html">List</a></li>
         </ul>
       </nav>
       <main class="main">
