--- a/components/button/index.html
+++ b/components/button/index.html
@@ -41,12 +41,13 @@
           </div>
           <h3>Components</h3>
           <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
-          <li class="list-item"><a href="#">Button</a></li>
+          <li class="list-item active"><a href="#">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="../card/index.html">Card</a></li>
           <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
+          <li class="list-item"><a href="../list/index.html">List</a></li>
         </ul>
       </nav>
       <main class="main">
