--- a/components/image/index.html
+++ b/components/image/index.html
@@ -45,8 +45,9 @@
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
           <li class="list-item"><a href="../card/index.html">Card</a></li>
-          <li class="list-item"><a href="#">Image</a></li>
+          <li class="list-item active"><a href="#">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
+          <li class="list-item"><a href="../list/index.html">List</a></li>
         </ul>
       </nav>
       <main class="main">
