--- a/components/input/index.html
+++ b/components/input/index.html
@@ -44,9 +44,10 @@
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
-          <li class="list-item"><a href="">Card</a></li>
-          <li class="list-item"><a href="">Image</a></li>
-          <li class="list-item"><a href="#">Input</a></li>
+          <li class="list-item"><a href="../card/index.html">Card</a></li>
+          <li class="list-item"><a href="../image/index.html">Image</a></li>
+          <li class="list-item active"><a href="#">Input</a></li>
+          <li class="list-item"><a href="../list/index.html">List</a></li>
         </ul>
       </nav>
       <main class="main">
