--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ li {
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-top: 1rem;
+  padding: 1rem .625rem 0;
 }
 
 .navbar > .list > h3 {
@@ -110,8 +110,9 @@ li {
   text-align: center;
   font-size: 1.2rem;
   font-weight: 500;
-  padding: 1.25rem 1.5rem;
+  padding: 1rem 1.25rem;
   cursor: pointer;
+  margin-top: .625rem;
 }
 .navbar .list .list-item a {
   color: black;
@@ -129,7 +130,7 @@ li {
 
 .main {
   flex-grow: 1;
-  margin: 1.25rem 1.9rem;
+  margin: 1.25rem 1rem;
   box-shadow: 1px 1px 15px 0 #ccc;
   padding: 1.5rem 2rem;
 }
