fix: fixed small issue in alert

--- a/components/alert/index.html
+++ b/components/alert/index.html
@@ -55,7 +55,7 @@
         <div class="line-break" ></div>
         <p class="component-description">The Alert component is used to provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
 
-        <div class="component-preview alert">
+        <div class="component-preview flex-col">
           <div class="alert-success"><span>&#10004;</span> Success</div>
           <div class="alert-warning"><span>&#9888;</span> Warning</div>
           <div class="alert-error"><span>&#x2620;</span> Error</div>
