feat:added modal component

--- a/components/alert/index.html
+++ b/components/alert/index.html
@@ -48,6 +48,7 @@
           <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
           <li class="list-item"><a href="../list/index.html">List</a></li>
+          <li class="list-item"><a href="../modal/index.html">Modal</a></li>
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
         </ul>
       </nav>
