--- a/components/avatars/index.html
+++ b/components/avatars/index.html
@@ -51,6 +51,7 @@
           <li class="list-item"><a href="../list/index.html">List</a></li>
           <li class="list-item"><a href="../modal/index.html">Modal</a></li>
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
+          <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
         </ul>
       </nav>
       <main class="main">
