--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -54,6 +54,7 @@
           <li class="list-item"><a href="../list/index.html">List</a></li>
           <li class="list-item active"><a href="#">Modal</a></li>
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
+          <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
         </ul>
       </nav>
       <main class="main">
